@@ -177,6 +177,7 @@ songpro.import.line1=This will import songs from a SongPro SDB database.
 kingsway.import.line2=This will take a long time (potentially hours!), so please be patient and leave Quelea running!
 easyslides.import.line1=This will import songs from an EasySlides XML file.
 easyworship.import.line1=This will import songs from an Easyworship Songs.MB file.
+missionpraise.import.line1=This will import songs from Mission Praise RTF files.
 openlyrics.import.line1=Select the location of a zip archive of openlyrics songs below.
 qsp.import.line1=Select the location of the Quelea songpack below.
 os.import.line1=Select the location of the Opensong database below.
@@ -426,6 +427,7 @@ show.verse.numbers=Show verse numbers
 add.song.hint.text=There are no songs here yet, but don't panic! To add a song, click the "New Song" button on the left.
 add.song.hint.search.text=There are no songs here that match this search yet. To add a song, click the "New Song" button on the left.
 filefilters.description.songs.mb=Easyworship Songs.MB database
+filefilters.description.songs.missionpraise=Mission Praise RTF files
 translate.tooltip=Song translations
 close.button=Close
 add.translation.button=Add translation...
@@ -596,3 +598,4 @@ max.lines.per.slide=Lines per slide (approximately)
 presentation.options.heading=Presentations
 recordings.options.heading=Recordings
 copy.song.db.default=Copy song to schedule by default
+mp.button=Mission Praise
